mobile version done

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
     <script src="https://js.stripe.com/v3/"></script>
     <link href='https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900|Material+Icons' rel="stylesheet">
 
-    <title>WAYS FL :: Shuttle services</title>
+    <title>WAYS FL :: Shuttle Solutions</title>
   </head>
   <body>
     <noscript>
